--- a/frontend/src/app/shopping-list/shopping-list.component.scss
+++ b/frontend/src/app/shopping-list/shopping-list.component.scss
@@ -1,10 +1,15 @@
+@import "/src/utilities/mixin";
+
 * {
   margin: 0;
   padding: 0;
 }
 
 #shopping-cart-wrapper {
+  height: 100vh;
   padding: 80px 131px 150px 131px;
+  overflow: auto;
+  @include scrollbar;
 
   header {
     h1 {
